--- a/src/App.css
+++ b/src/App.css
@@ -28,16 +28,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
 
 .container-1 {
@@ -45,6 +35,14 @@
   color: antiquewhite;
   height: 100vh;
   background-image: linear-gradient(to right, #434343 0%, rgb(237, 21, 21) 100%);
+}
+
+.home2 {
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+}
+
+.home2 p {
+  color: rgb(152, 152, 242);
 }
 
 /* image */
@@ -73,17 +71,29 @@
   }
 }
 
+@media screen and (max-width:1300px) {
 
-@media screen and (max-width:700px) {
+  .container-1 {
+    height: 90vh;
+  }
+
+}
+
+
+@media screen and (max-width:1000px) {
 
   .container-1 {
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 50px;
   }
 
-  /* .email {
-    font-size: 16px;
-  } */
+}
+
+@media screen and (max-width:1200px) {
+
+  .container-1 {
+    padding-top: 20px;
+  }
 }
 
 /* footer email section */
@@ -102,13 +112,6 @@
   }
 }
 
-/* 
-@media screen and (max-width:250px) {
-  .animated-button {
-    font-size: 16px;
-    padding: 10px;
-  }
-} */
 /* payment section */
 .payment {
   display: flex;
@@ -119,7 +122,6 @@
 }
 
 .container {
-  /* font-size: medium; */
   font-weight: bolder;
   color: white;
   margin-bottom: 15px;
@@ -173,5 +175,9 @@
 
 .poker {
   justify-content: space-between;
-  /* border: 2px solid red; */
+}
+
+.rummy_img2 {
+  width: 60%;
+  padding-top: 10px;
 }
